# klaradvn

./: README.md  pyproject.toml
klaradvn/: build_model.py  cli.py  extract.py  generate.py  template.modelfile
tests/: conftest.py  meta_test.py  test_build_model.py  test_extract.py  test_generate.py
tests/test-package/package_one/: amazing_class.py  lorem_ipsum.py
tests/test-package/tests/: test_amazing_class.py  test_lorem_ipsum.py
